--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	      <a href='https://github.com/Devyadavoo7' target="_blank" class="mr-5 hover:text-gray-900">Github</a>
 	      <a href='https://www.linkedin.com/in/dev-yadav-659626172' target="_blank" class="mr-5 hover:text-gray-900">LinkedIn</a>
 	    </nav>
-	    <button onclick="window.open('https://drive.google.com/file/d/14c7DDXRHGSUfacYEoN4ORoAD_UVyvwQ2/view','_blank')" class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0 ml-4" target=”_blank” type='button'>Resume
+	    <button onclick="window.open('https://drive.google.com/file/d/1rgSjYtbtq7BYwrKCkxDPeQY_XKeSmVBJ/view?usp=sharing','_blank')" class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0 ml-4" target=”_blank” type='button'>Resume
 	      <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
 	        <path d="M5 12h14M12 5l7 7-7 7"></path>
 	      </svg>
@@ -99,7 +99,7 @@
 	      <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Project Portfolio</h1>
 	    </div>
 	    <div class="flex flex-wrap -m-4">
-	      <div class="sm:w-1/2 p-4">
+	      <div class="lg:w-1/3 sm:w-1/2 p-4">
 	        <div class="flex relative">
 	          <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="./assets/images/colorgame.png">
 	          <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">	            
@@ -110,7 +110,7 @@
 	          </div>
 	        </div>
 	      </div>
-	      <div class="sm:w-1/2 p-4">
+	      <div class="lg:w-1/3 sm:w-1/2 p-4">
 	        <div class="flex relative">
 	          <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="./assets/images/todolist.png">
 	          <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">	            
@@ -121,7 +121,7 @@
 	          </div>
 	        </div>
 	      </div>
-	      <div class="sm:w-1/2 p-4">
+	      <div class="lg:w-1/3 sm:w-1/2 p-4">
 	        <div class="flex relative">
 	          <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="./assets/images/patatapclone.png">
 	          <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">	            
@@ -143,17 +143,17 @@
 	          </div>
 	        </div>
 	      </div>
-	      <!-- <div class="sm:w-1/2 p-4">
+	      <div class="sm:w-1/2 p-4">
 	        <div class="flex relative">
-	          <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="https://dummyimage.com/605x365">
+	          <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="./assets/images/contactslist.png">
 	          <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">	            
-	            <a href='https://devyadavoo7.github.io/patatapclone/' target="_blank" class="title-font text-lg font-medium text-gray-900 mb-3">Contact List</a>
+	            <a href='https://github.com/Devyadavoo7/contactslist.git' target="_blank" class="title-font text-lg font-medium text-gray-900 mb-3">Contact List</a>
 	            <p class="leading-relaxed">Want to have a clean list for your contacts. Here's one for you.</p>
 	            <br>
 	            <h2 class="tracking-widest text-sm title-font font-medium text-purple-500 mb-1">Javascript | React.js</h2>
 	          </div>
 	        </div>
-	      </div> -->
+	      </div>
 
 	      <!-- <div class="sm:w-1/2 p-4">
 	        <div class="flex relative">
