--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 	      <span class="ml-3 text-xl">Dev Yadav</span>
 	    </a>
 	    <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center ml-10">
-	      <a href='https://github.com/Devyadavoo7' target="_blank" class="mr-5 hover:text-gray-900">Github</a>
-	      <a href='https://www.linkedin.com/in/dev-yadav-659626172' target="_blank" class="mr-5 hover:text-gray-900">LinkedIn</a>
+	      <a href='https://github.com/Devyadav0512' target="_blank" class="mr-5 hover:text-gray-900">Github</a>
+	      <a href='https://www.linkedin.com/in/devyadav0512/' target="_blank" class="mr-5 hover:text-gray-900">LinkedIn</a>
 	    </nav>
-	    <button onclick="window.open('https://drive.google.com/file/d/1zsjQmRSfxcxdhtNG5XlqEPPRrlS8NhFf/view?usp=sharing','_blank')" class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0 ml-4" target=”_blank” type='button'>Resume
+	    <button onclick="window.open('https://drive.google.com/file/d/1rVeVmXdZ4qEJB9dbxYK30gYi99Uda9ai/view?usp=sharing','_blank')" class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0 ml-4" target=”_blank” type='button'>Resume
 	      <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
 	        <path d="M5 12h14M12 5l7 7-7 7"></path>
 	      </svg>
@@ -104,7 +104,7 @@
 	        <div class="flex relative">
 	          <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="./assets/images/colorgame.png">
 	          <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">	            
-	            <a href='https://devyadavoo7.github.io/colorgame/' target="_blank" class="title-font text-lg font-medium text-gray-900 mb-3">Color Guessing Game</a>
+	            <a href='https://devyadav0512.github.io/colorgame/' target="_blank" class="title-font text-lg font-medium text-gray-900 mb-3">Color Guessing Game</a>
 	            <p class="leading-relaxed">How much you know about RGB. Let's find out.</p>
 	            <br>
 	            <h2 class="tracking-widest text-sm title-font font-medium text-purple-500 mb-1">HTML | CSS | Javascript | jQuery</h2>
@@ -115,7 +115,7 @@
 	        <div class="flex relative">
 	          <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="./assets/images/todolist.png">
 	          <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">	            
-	            <a href='https://devyadavoo7.github.io/todolist/' target="_blank" class="title-font text-lg font-medium text-gray-900 mb-3">Todo List</a>
+	            <a href='https://devyadav0512.github.io/todolist/' target="_blank" class="title-font text-lg font-medium text-gray-900 mb-3">Todo List</a>
 	            <p class="leading-relaxed">Do you often forget your tasks. Here's a Todo list for you</p>
 	            <br>
 	            <h2 class="tracking-widest text-sm title-font font-medium text-purple-500 mb-1">HTML | CSS | Javascript | jQuery</h2>
@@ -126,7 +126,7 @@
 	        <div class="flex relative">
 	          <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="./assets/images/patatapclone.png">
 	          <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">	            
-	            <a href='https://devyadavoo7.github.io/patatapclone/' target="_blank" class="title-font text-lg font-medium text-gray-900 mb-3">Patatap Clone</a>
+	            <a href='https://devyadav0512.github.io/patatapclone/' target="_blank" class="title-font text-lg font-medium text-gray-900 mb-3">Patatap Clone</a>
 	            <p class="leading-relaxed">Have you ever visited Patatap website. I have it's clone for you.</p>
 	            <br>
 	            <h2 class="tracking-widest text-sm title-font font-medium text-purple-500 mb-1">CSS | Javascript | Howler.js | Paper.js</h2>
@@ -137,7 +137,7 @@
 	        <div class="flex relative">
 	          <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="./assets/images/whatameal.png">
 	          <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">	            
-	            <a href='https://devyadavoo7.github.io/whatameal/' target="_blank" class="title-font text-lg font-medium text-gray-900 mb-3">What a Meal!!</a>
+	            <a href='https://devyadav0512.github.io/whatameal/' target="_blank" class="title-font text-lg font-medium text-gray-900 mb-3">What a Meal!!</a>
 	            <p class="leading-relaxed">Do you often get confused what to eat. Here's a solution for you.</p>
 	            <br>
 	            <h2 class="tracking-widest text-sm title-font font-medium text-purple-500 mb-1">React.js | Redux.js</h2>
@@ -148,7 +148,7 @@
 	        <div class="flex relative">
 	          <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="./assets/images/contactslist.png">
 	          <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">	            
-	            <a href='https://github.com/Devyadavoo7/contactslist.git' target="_blank" class="title-font text-lg font-medium text-gray-900 mb-3">Contact List</a>
+	            <a href='https://github.com/Devyadav0512/contactslist.git' target="_blank" class="title-font text-lg font-medium text-gray-900 mb-3">Contact List</a>
 	            <p class="leading-relaxed">Want to have a clean list for your contacts. Here's one for you.</p>
 	            <br>
 	            <h2 class="tracking-widest text-sm title-font font-medium text-purple-500 mb-1">Javascript | React.js</h2>
@@ -160,7 +160,7 @@
 	        <div class="flex relative">
 	          <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="https://dummyimage.com/605x365">
 	          <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">	            
-	            <a href='https://devyadavoo7.github.io/patatapclone/' target="_blank" class="title-font text-lg font-medium text-gray-900 mb-3">Patatap Clone</a>
+	            <a href='https://devyadav0512.github.io/patatapclone/' target="_blank" class="title-font text-lg font-medium text-gray-900 mb-3">Patatap Clone</a>
 	            <p class="leading-relaxed">Have you ever visited Patatap website. I have it's clone for you.</p>
 	            <br>
 	            <h2 class="tracking-widest text-sm title-font font-medium text-purple-500 mb-1">CSS | Javascript | Howler.js | Paper.js</h2>
@@ -178,10 +178,10 @@
 	      <span class="ml-3 text-xl">Site By DEV YADAV</span>
 	    </a>
 	    <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
-	      <a href='https://github.com/Devyadavoo7' target="_blank" class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900 p-2">
+	      <a href='https://github.com/Devyadav0512' target="_blank" class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900 p-2">
 	      <img src="./assets/images/github.svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white" viewBox="0 0 24 24">
 	      </a>
-	      <a href='https://www.linkedin.com/in/dev-yadav-659626172' target="_blank" class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900 p-2">
+	      <a href='https://www.linkedin.com/in/devyadav0512/' target="_blank" class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900 p-2">
 	      <img src="./assets/images/linkedin.svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white" viewBox="0 0 24 24">
 	      </a>	      
 	    </span>
